--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testprez",
+  "name": "statemgr-boilerplate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +9,9 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -30,6 +31,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -38,10 +40,12 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.7",
     "spectacle": "^4.0.0",
     "spectacle-code-slide": "git+https://github.com/adaschevici/spectacle-code-slide.git",
     "spectacle-renderer": "^0.0.3",
     "spectacle-terminal": "git+https://github.com/adaschevici/spectacle-terminal.git",
+    "spectacle-theme-nova": "git+https://github.com/adaschevici/spectacle-theme-nova.git",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
