--- a/package.json
+++ b/package.json
@@ -3,58 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "8.6.3",
     "babel-cli": "^6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.5",
+    "babel-jest": "23.0.1",
+    "babel-loader": "7.1.4",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "6.16.0",
+    "babel-preset-latest": "6.24.1",
     "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "chalk": "2.4.1",
+    "css-loader": "0.28.11",
+    "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "prismjs": "1.6.0",
-    "eslint": "4.10.0",
+    "eslint": "5.0.0",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-flowtype": "2.49.3",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.9.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "file-loader": "1.1.11",
+    "fs-extra": "6.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "jest": "23.1.0",
     "node-sass": "^4.7.2",
-    "npm": "^5.8.0",
+    "npm": "^6.1.0",
+    "npm-check-updates": "^2.14.2",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
+    "postcss-flexbugs-fixes": "3.3.1",
+    "postcss-loader": "2.1.5",
+    "prismjs": "1.15.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.3",
     "spectacle": "^4.2.2",
     "spectacle-code-slide": "git+https://github.com/adaschevici/spectacle-code-slide.git",
     "spectacle-renderer": "^0.0.3",
     "spectacle-terminal": "git+https://github.com/adaschevici/spectacle-terminal.git",
     "spectacle-theme-nova": "git+https://github.com/adaschevici/spectacle-theme-nova.git",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "style-loader": "0.21.0",
+    "sw-precache-webpack-plugin": "0.11.5",
+    "url-loader": "1.0.1",
+    "webpack": "4.12.1",
+    "webpack-dev-server": "3.1.4",
+    "webpack-manifest-plugin": "2.0.3",
+    "whatwg-fetch": "2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
