--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-loader": "2.0.0",
     "eslint-plugin-flowtype": "2.49.3",
     "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "7.9.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
