--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "chalk": "^2.4.1",
+    "css-loader": "^1.0.0",
+    "dotenv": "^6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
