--- a/package.json
+++ b/package.json
@@ -30,19 +30,18 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "node-sass": "^4.9.2",
     "npm": "^6.1.0",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
+    "postcss-flexbugs-fixes": "^3.3.1",
+    "postcss-loader": "^2.1.5",
     "prismjs": "^1.15.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.4.1",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.3",
     "spectacle": "^4.3.1",
     "spectacle-code-slide": "git+https://github.com/adaschevici/spectacle-code-slide.git",
     "spectacle-renderer": "^0.0.3",
@@ -104,6 +103,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "jest": "^23.3.0",
     "raw-loader": "^0.5.1"
   }
 }
