--- a/package.json
+++ b/package.json
@@ -91,19 +91,19 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "react-dev-utils": "^5.0.0",
     "html-webpack-plugin": "2.29.0",
+    "jest": "^23.3.0",
+    "node-sass": "^4.9.2",
+    "npm": "^6.1.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
-    "node-sass": "^4.9.2",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "npm": "^6.1.0",
+    "raw-loader": "^0.5.1",
+    "react-dev-utils": "^5.0.0",
+    "style-loader": "^0.21.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "url-loader": "^1.0.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "jest": "^23.3.0",
-    "raw-loader": "^0.5.1"
+    "webpack-manifest-plugin": "1.3.2"
   }
 }
