--- a/package.json
+++ b/package.json
@@ -81,17 +81,17 @@
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "4.10.0",
+    "eslint": "^5.0.1",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "file-loader": "^1.1.11",
+    "fs-extra": "^6.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.3.0",
     "node-sass": "^4.9.2",
     "npm": "^6.1.0",
